--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "npm run lint -- --fix",
     "stylelint": "stylelint \"**/*.css\" --fix"
   },
   "lint-staged": {
+    "*.(js|jsx)": [
+      "npm run lint:fix",
+      "git add"
+    ],
     "*.css": [
       "npm run stylelint",
       "git add"
@@ -19,6 +24,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
     "classnames": "^2.3.2",
     "eslint": "8.42.0",
@@ -28,8 +34,12 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
+    "prettier": "2.8.8",
     "stylelint": "^15.7.0",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-order": "^4.1.0",
