build: change dev branch for actions

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,7 +1,7 @@
 name: Dev pipeline
 on:
   push:
-    branches: [ "deploy/dev" ]
+    branches: [ "master" ]
 jobs:
   lint:
     runs-on: ubuntu-latest
