--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "react/button-has-type": "warn",
     "jsx-a11y/anchor-is-valid": "warn",
     "import/no-named-as-default": "off",
+    "no-unused-vars": "warn",
     "indent": [
       "warn",
       2
